--- a/config.ini
+++ b/config.ini
@@ -7,22 +7,22 @@
 ;port = "5432";
 ;debug = "false";
 -------------------------------------------
-:casa
-driver = "pgsql";
-server = "localhost";
-user = "postgres";
-password = "GTF141";
-database = "Sputify";
-port = "5432";
-debug = "false";
+;casa
+;driver = "pgsql";
+;server = "localhost";
+;user = "postgres";
+;password = "GTF141";
+;database = "Sputify";
+;port = "5432";
+;debug = "false";
 
 -------------------------------------------
 
 ;IF mysql
-;driver = "mysql";
-;server = "localhost";
-;user = "root";
-;password = "mydba";
-;database = "raira";
-;port = "3306";
-;debug = "true";
+driver = "mysql";
+server = "localhost";
+user = "root";
+password = "";
+database = "dws2_raira";
+port = "3306";
+debug = "true";
